# EcoSnap

./: DataVisualization.html  README.txt  contactus.html  data.py  data2.py  data3.py  index.html  mlmodel.html  plot.html  pyproject.toml  significance.html  usa_city_indices.html  usa_co2_plot.html
assets/css/: main.css
